src/qt/libqgraphicssceneevent.bf

extension CQt
{
	[LinkName("QGraphicsSceneDragDropEvent_new")]
	public static extern void* QGraphicsSceneDragDropEvent_new();
	[LinkName("QGraphicsSceneDragDropEvent_new2")]
	public static extern void* QGraphicsSceneDragDropEvent_new2(int64 typeVal);
	[LinkName("QGraphicsSceneDragDropEvent_Pos")]
	public static extern void QGraphicsSceneDragDropEvent_Pos(void* c_this);
	[LinkName("QGraphicsSceneDragDropEvent_SetPos")]
	public static extern void QGraphicsSceneDragDropEvent_SetPos(void* c_this, void* pos);
	[LinkName("QGraphicsSceneDragDropEvent_ScenePos")]
	public static extern void QGraphicsSceneDragDropEvent_ScenePos(void* c_this);
	[LinkName("QGraphicsSceneDragDropEvent_SetScenePos")]
	public static extern void QGraphicsSceneDragDropEvent_SetScenePos(void* c_this, void* pos);
	[LinkName("QGraphicsSceneDragDropEvent_ScreenPos")]
	public static extern void QGraphicsSceneDragDropEvent_ScreenPos(void* c_this);
	[LinkName("QGraphicsSceneDragDropEvent_SetScreenPos")]
	public static extern void QGraphicsSceneDragDropEvent_SetScreenPos(void* c_this, void* pos);
	[LinkName("QGraphicsSceneDragDropEvent_Buttons")]
	public static extern int64 QGraphicsSceneDragDropEvent_Buttons(void* c_this);
	[LinkName("QGraphicsSceneDragDropEvent_SetButtons")]
	public static extern void QGraphicsSceneDragDropEvent_SetButtons(void* c_this, int64 buttons);
	[LinkName("QGraphicsSceneDragDropEvent_Modifiers")]
	public static extern int64 QGraphicsSceneDragDropEvent_Modifiers(void* c_this);
	[LinkName("QGraphicsSceneDragDropEvent_SetModifiers")]
	public static extern void QGraphicsSceneDragDropEvent_SetModifiers(void* c_this, int64 modifiers);
	[LinkName("QGraphicsSceneDragDropEvent_PossibleActions")]
	public static extern int64 QGraphicsSceneDragDropEvent_PossibleActions(void* c_this);
	[LinkName("QGraphicsSceneDragDropEvent_SetPossibleActions")]
	public static extern void QGraphicsSceneDragDropEvent_SetPossibleActions(void* c_this, int64 actions);
	[LinkName("QGraphicsSceneDragDropEvent_ProposedAction")]
	public static extern int64 QGraphicsSceneDragDropEvent_ProposedAction(void* c_this);
	[LinkName("QGraphicsSceneDragDropEvent_SetProposedAction")]
	public static extern void QGraphicsSceneDragDropEvent_SetProposedAction(void* c_this, int64 action);
	[LinkName("QGraphicsSceneDragDropEvent_AcceptProposedAction")]
	public static extern void QGraphicsSceneDragDropEvent_AcceptProposedAction(void* c_this);
	[LinkName("QGraphicsSceneDragDropEvent_DropAction")]
	public static extern int64 QGraphicsSceneDragDropEvent_DropAction(void* c_this);
	[LinkName("QGraphicsSceneDragDropEvent_SetDropAction")]
	public static extern void QGraphicsSceneDragDropEvent_SetDropAction(void* c_this, int64 action);
	[LinkName("QGraphicsSceneDragDropEvent_Source")]
	public static extern void* QGraphicsSceneDragDropEvent_Source(void* c_this);
	[LinkName("QGraphicsSceneDragDropEvent_SetSource")]
	public static extern void QGraphicsSceneDragDropEvent_SetSource(void* c_this, void* source);
	[LinkName("QGraphicsSceneDragDropEvent_MimeData")]
	public static extern void* QGraphicsSceneDragDropEvent_MimeData(void* c_this);
	[LinkName("QGraphicsSceneDragDropEvent_SetMimeData")]
	public static extern void QGraphicsSceneDragDropEvent_SetMimeData(void* c_this, void* data);
	/// Delete this object from C++ memory
	[LinkName("QGraphicsSceneDragDropEvent_Delete")]
	public static extern void QGraphicsSceneDragDropEvent_Delete(void* self);
}
public class QGraphicsSceneResizeEvent
{
	protected void* nativePtr;
	
	public this()
	{
		this.nativePtr = CQt.QGraphicsSceneResizeEvent_new();
	}
	
	public ~this()
	{
		CQt.QGraphicsSceneResizeEvent_Delete(this.nativePtr);
	}
	
	public void OldSize()
	{
		CQt.QGraphicsSceneResizeEvent_OldSize(this.nativePtr);
	}
	
	public void SetOldSize(void* size)
	{
		CQt.QGraphicsSceneResizeEvent_SetOldSize(this.nativePtr, size);
	}
	
	public void NewSize()
	{
		CQt.QGraphicsSceneResizeEvent_NewSize(this.nativePtr);
	}
	
	public void SetNewSize(void* size)
	{
		CQt.QGraphicsSceneResizeEvent_SetNewSize(this.nativePtr, size);
	}
	
	public void* Widget()
	{
		return CQt.QGraphicsSceneEvent_Widget(this.nativePtr);
	}
	
	public void SetWidget(void* widget)
	{
		CQt.QGraphicsSceneEvent_SetWidget(this.nativePtr, widget);
	}
	
	public uint64 Timestamp()
	{
		return CQt.QGraphicsSceneEvent_Timestamp(this.nativePtr);
	}
	
	public void SetTimestamp(uint64 ts)
	{
		CQt.QGraphicsSceneEvent_SetTimestamp(this.nativePtr, ts);
	}
	
	public int64 Type()
	{
		return CQt.QEvent_Type(this.nativePtr);
	}
	
	public bool Spontaneous()
	{
		return CQt.QEvent_Spontaneous(this.nativePtr);
	}
	
	public virtual void SetAccepted(bool accepted)
	{
		CQt.QEvent_SetAccepted(this.nativePtr, accepted);
	}
	
	public bool IsAccepted()
	{
		return CQt.QEvent_IsAccepted(this.nativePtr);
	}
	
	public void Accept()
	{
		CQt.QEvent_Accept(this.nativePtr);
	}
	
	public void Ignore()
	{
		CQt.QEvent_Ignore(this.nativePtr);
	}
	
	public bool IsInputEvent()
	{
		return CQt.QEvent_IsInputEvent(this.nativePtr);
	}
	
	public bool IsPointerEvent()
	{
		return CQt.QEvent_IsPointerEvent(this.nativePtr);
	}
	
	public bool IsSinglePointEvent()
	{
		return CQt.QEvent_IsSinglePointEvent(this.nativePtr);
	}
	
	public static int32 RegisterEventType()
	{
		return CQt.QEvent_RegisterEventType();
	}
	
	public virtual void* Clone()
	{
		return CQt.QEvent_Clone(this.nativePtr);
	}
	
	public static int32 RegisterEventType1(int32 hint)
	{
		return CQt.QEvent_RegisterEventType1(hint);
	}
	
}
extension CQt
{
	[LinkName("QGraphicsSceneResizeEvent_new")]
	public static extern void* QGraphicsSceneResizeEvent_new();
	[LinkName("QGraphicsSceneResizeEvent_OldSize")]
	public static extern void QGraphicsSceneResizeEvent_OldSize(void* c_this);
	[LinkName("QGraphicsSceneResizeEvent_SetOldSize")]
	public static extern void QGraphicsSceneResizeEvent_SetOldSize(void* c_this, void* size);
	[LinkName("QGraphicsSceneResizeEvent_NewSize")]
	public static extern void QGraphicsSceneResizeEvent_NewSize(void* c_this);
	[LinkName("QGraphicsSceneResizeEvent_SetNewSize")]
	public static extern void QGraphicsSceneResizeEvent_SetNewSize(void* c_this, void* size);
	/// Delete this object from C++ memory
	[LinkName("QGraphicsSceneResizeEvent_Delete")]
	public static extern void QGraphicsSceneResizeEvent_Delete(void* self);
}
public class QGraphicsSceneMoveEvent
{
	protected void* nativePtr;
	
	public this()
	{
		this.nativePtr = CQt.QGraphicsSceneMoveEvent_new();
	}
	
	public ~this()
	{
		CQt.QGraphicsSceneMoveEvent_Delete(this.nativePtr);
	}
	
	public void OldPos()
	{
		CQt.QGraphicsSceneMoveEvent_OldPos(this.nativePtr);
	}
	
	public void SetOldPos(void* pos)
	{
		CQt.QGraphicsSceneMoveEvent_SetOldPos(this.nativePtr, pos);
	}
	
	public void NewPos()
	{
		CQt.QGraphicsSceneMoveEvent_NewPos(this.nativePtr);
	}
	
	public void SetNewPos(void* pos)
	{
		CQt.QGraphicsSceneMoveEvent_SetNewPos(this.nativePtr, pos);
	}
	
	public void* Widget()
	{
		return CQt.QGraphicsSceneEvent_Widget(this.nativePtr);
	}
	
	public void SetWidget(void* widget)
	{
		CQt.QGraphicsSceneEvent_SetWidget(this.nativePtr, widget);
	}
	
	public uint64 Timestamp()
	{
		return CQt.QGraphicsSceneEvent_Timestamp(this.nativePtr);
	}
	
	public void SetTimestamp(uint64 ts)
	{
		CQt.QGraphicsSceneEvent_SetTimestamp(this.nativePtr, ts);
	}
	
	public int64 Type()
	{
		return CQt.QEvent_Type(this.nativePtr);
	}
	
	public bool Spontaneous()
	{
		return CQt.QEvent_Spontaneous(this.nativePtr);
	}
	
	public virtual void SetAccepted(bool accepted)
	{
		CQt.QEvent_SetAccepted(this.nativePtr, accepted);
	}
	
	public bool IsAccepted()
	{
		return CQt.QEvent_IsAccepted(this.nativePtr);
	}
	
	public void Accept()
	{
		CQt.QEvent_Accept(this.nativePtr);
	}
	
	public void Ignore()
	{
		CQt.QEvent_Ignore(this.nativePtr);
	}
	
	public bool IsInputEvent()
	{
		return CQt.QEvent_IsInputEvent(this.nativePtr);
	}
	
	public bool IsPointerEvent()
	{
		return CQt.QEvent_IsPointerEvent(this.nativePtr);
	}
	
	public bool IsSinglePointEvent()
	{
		return CQt.QEvent_IsSinglePointEvent(this.nativePtr);
	}
	
	public static int32 RegisterEventType()
	{
		return CQt.QEvent_RegisterEventType();
	}
	
	public virtual void* Clone()
	{
		return CQt.QEvent_Clone(this.nativePtr);
	}
	
	public static int32 RegisterEventType1(int32 hint)
	{
		return CQt.QEvent_RegisterEventType1(hint);
	}
	
}
extension CQt
{
	[LinkName("QGraphicsSceneMoveEvent_new")]
	public static extern void* QGraphicsSceneMoveEvent_new();
	[LinkName("QGraphicsSceneMoveEvent_OldPos")]
	public static extern void QGraphicsSceneMoveEvent_OldPos(void* c_this);
	[LinkName("QGraphicsSceneMoveEvent_SetOldPos")]
	public static extern void QGraphicsSceneMoveEvent_SetOldPos(void* c_this, void* pos);
	[LinkName("QGraphicsSceneMoveEvent_NewPos")]
	public static extern void QGraphicsSceneMoveEvent_NewPos(void* c_this);
	[LinkName("QGraphicsSceneMoveEvent_SetNewPos")]
	public static extern void QGraphicsSceneMoveEvent_SetNewPos(void* c_this, void* pos);
	/// Delete this object from C++ memory
	[LinkName("QGraphicsSceneMoveEvent_Delete")]
	public static extern void QGraphicsSceneMoveEvent_Delete(void* self);
}